--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Loïc Stéphane M. BAMENOU
 
 # Photo de profil à rajouter 
-
+logo: /Images/Photo_Pro/IMG_1967.JPG
 
 # Description du poste ou du profil 
 description: 
