--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 title: Loïc Stéphane M. BAMENOU
 
 # Photo de profil à rajouter 
-logo: /Images/Photo_Pro/IMG_1967.JPG
+logo: /Images/Photo_Pro/Photo.png
 
 # Description du poste ou du profil 
-description: 
+description: Passionate Data Analyst BI with expertise in Power BI, Tableau, Python, and SQL. Currently at TDF, I optimize operational data and create interactive dashboards
 
 # Offrir la possibilité à une personne de récupérer mon code 
 show_downloads: false 
